# django-mcp-server

./: README.md  pyproject.toml
