[project]
name = "django-mcp-server"
version = "0.5.6"
description = "Django MCP Server is a Django extensions to easily enable AI Agents to interact with Django Apps through the Model Context Protocol it works equally well on WSGI and ASGI"
authors = [
    {name = "Omar BENHAMID",email = "omar.benhamid@smart-gts.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/gts360/django-mcp-server"
repository = "https://github.com/gts360/django-mcp-server"
documentation = "https://github.com/gts360/django-mcp-server"
keywords = ["django", "mcp", "model context protocol", "tools"]
requires-python = ">=3.10"
dependencies = [
    "mcp (>=1.8.0)",
    "django (>=4.0)",
    "djangorestframework (>=3.15.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "uritemplate (>=4.1.1,<5.0.0)",
]
[project.urls]
Homepage = "https://github.com/gts360/django-mcp-server"
Repository = "https://github.com/gts360/django-mcp-server"
Issues = "https://github.com/gts360/django-mcp-server/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "mcp_server"
[tool.poetry.group.dev.dependencies]
djangorestframework = "^3.16.0"
pytest-django = "^4.11.1"
uvicorn = "^0.34.3"
djangorestframework-csv = "^3.0.2"
drf-excel = "^2.5.3"

